 Bug 382871 -  XMLHttpRequest JS wrapper not preserved by its event handlers, r+sr=jst